novar configurações no aplication propeties

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,8 +5,8 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-security.oauth2.client.client-id=bd_climed
-security.oauth2.client.client-secret=msclimed123
+#security.oauth2.client.client-id=bd_climed
+#security.oauth2.client.client-secret=msclimed123
 
-jwt.secret=MY-JWT-SECRET
-jwt.duration=86400
+#jwt.secret=MY-JWT-SECRET
+#jwt.duration=86400
