--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,15 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<dependency>
+		    <groupId>com.opencsv</groupId>
+		    <artifactId>opencsv</artifactId>
+		    <version>5.5</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
